fixed text-align

--- a/css/bassam.css
+++ b/css/bassam.css
@@ -369,9 +369,14 @@ img::-moz-selection {
 .our-story-section {
   padding: 100px;
   background-color: #e1dad5;
+  text-align: center;
+}
+.our-story-section1{
+  padding: 100px;
+  background-color: #e1dad5;
   text-align: left;
 }
-.our-story-section h2{
+.our-story-section1 h2{
   text-align: center;
 }
 #map {
